# flexishift

./: README.md  api.md  driver_e2e_test_report.py  mobileapi.md  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_backend.bat
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_load_code_verified.py  0003_add_rating_tags.py  0004_add_fleet_equipment.py  0005_add_driver_assignments.py  0006_widen_signature_url_columns.py  0007_support_tickets.py  0008_add_local_uploads.py  0009_add_driver_availability.py  16922c8bc3b3_add_refresh_tokens_table.py  7db758afc6bd_add_pickup_drop_to_shifts.py  c2df54d96545_add_driver_requirement_to_jobs.py  e44726cf5a8a_add_shifts.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: config.py  connection_manager.py  database.py  enums.py  exceptions.py  response.py  security.py
backend/app/middleware/: logging_middleware.py  rate_limit_middleware.py
backend/app/models/: __init__.py  availability.py  compliance.py  document.py  job.py  local_upload.py  notification.py  payment.py  quote.py  rating.py  shift.py  support_ticket.py  tracking.py  user.py
backend/app/routers/: admin.py  auth.py  availability.py  bookings.py  compliance.py  compliance_flat.py  dashboard.py  documents.py  (+20 more)
backend/scripts/: add_driver_assignments_column.py  add_fleet_equipment_column.py  create_admin.py  init.sql  reset_admin_password.py  seed_data.py
backend/tests/: conftest.py
(+290 files in other folders)
