[project]
name = "freightflex-backend"
version = "0.1.0"
description = "Digital freight-brokerage platform"
authors = [
    { name = "Nandan222001", email = "nandankumar222001@gmail.com" }
]
requires-python = "^3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "pymysql==1.1.1",
    "cryptography==42.0.8",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "redis==5.0.4",
    "httpx==0.27.0",
    "celery==5.4.0",
    "razorpay>=1.5.0",
    "boto3==1.34.110",
    "fpdf2==2.7.9",
    "slowapi==0.1.9",
    "structlog==24.1.0",
    "python-dotenv==1.0.1",
    "nanoid==2.0.0",
    "setuptools"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
